--- a/FinalProject/v10/views/about.ejs
+++ b/FinalProject/v10/views/about.ejs
@@ -1,12 +1,10 @@
 <% include partials/header%>
-<div class="container">
+<div class="container ctrsad">
 	<div class="row" id="aboutus" align="center">
 		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 			<div class="panel panel-default pd1">
 				<div class="panel-heading">
-					<h2>
-						<strong>About Us !</strong>
-					</h2>
+					<h2><strong>About Us</strong></h2>
 				</div>
 				<div class="panel-body">
 					<p>
