--- a/FinalProject/v10/views/campgrounds/new.ejs
+++ b/FinalProject/v10/views/campgrounds/new.ejs
@@ -3,7 +3,7 @@
 	<div class="row">
 		<div class="col-md-2"></div>
 		<div class="col-md-8">
-			<h1>Share your Story</h1>
+			<h1 class="h1nwstry">Share your Story</h1>
 			<div class="widget-area no-padding blank">
 				<div class="status-upload">
 					<form action="/story" method="post">
