--- a/FinalProject/v10/views/landing.ejs
+++ b/FinalProject/v10/views/landing.ejs
@@ -46,19 +46,21 @@
 
 <div class="container container-header ctnhdr-2">
 	<div class="row">
-		<div class="col-sm-6 sb2">
-			<h2>
+		<div class="col-sm-2"></div>
+		<div class="col-sm-8 sb2">
+			<h2 class="hasd">
 				<strong>Share your journey with us</strong>
 			</h2>
-			<h4>
-				This website can be the place for you to share anything. You can be the fighter who is still fighting for your journey, or you are the winner already. Or you can be someone who God sent to anyone here to help. Who ever you are, we are ready to hear your story.<br>
+			<h4 class="hasd">
+				This website can be the place for you to share anything.<br> You can be the fighter who is still fighting for your journey, or you are the winner already. Or you can be someone who God sent to anyone here to help. Who ever you are, we are ready to hear your story.<br>
 				<br>
 				Be inspiration!
 			</h4>
-			<a class="btn btn-primary btn-lg btn_landing1" href="/story"><strong>Start Writing</strong></a>
 		</div>
-		<div class="col-sm-6">
-			<img src="/images/hugging-family.jpeg" alt="pic" style="width: 100%; height: 295px;">
+		<div class="col-sm-12">
+			<div class="text-center">
+				<a class="btn btn-primary btn-lg btn_landing1 btnasd" href="/story/new"><strong>Start Writing</strong></a>
+			</div>
 		</div>
 	</div>
 </div>
