--- a/FinalProject/v10/views/campgrounds/edit.ejs
+++ b/FinalProject/v10/views/campgrounds/edit.ejs
@@ -1,18 +1,21 @@
 <% include ../partials/header%>
-<div class="container">
+<div class="container ctrdit1">
 	<div class="row">
-	<h1 style="text-align:center">Edit <%=campground.name%></h1>
-		<div style="width:30%; margin:25px auto">
-			<form action="/story/<%=campground._id%>?_method=PUT" method="post">
-				<div class="form-group">
-					<input type="text" value="<%=campground.name%>" name="campground[name]" class="form-control" required>
+		<div class="col-sm-2"></div>
+		<div class="col-sm-8">
+			<h1 class="h1edtstry">Edit Story</h1>
+			<div class="widget-area no-padding blank">
+				<div class="status-upload">
+					<form action="/story/<%=campground._id%>?_method=PUT" method="post">
+						<div class="form-group">
+							<input type="text" value="<%=campground.name%>" name="campground[name]" class="form-control status-upload" required>
+						</div>
+						<textarea name="campground[description]" required><%=campground.description%></textarea>
+						<button class="btn btn-success">Edit</button>
+					</form>
+					<a href="/story/<%=campground._id%>">Go Back</a>
 				</div>
-				<div class="form-group">
-					<textarea rows="4" cols="48" name="campground[description]" required><%=campground.description%></textarea>
-				</div>
-					<button class="btn btn-success btn-lg btn-block">Submit</button>
-			</form>
-			<a href="/story">Go Back</a>
+			</div>
 		</div>
 	</div>
 </div>
