--- a/FinalProject/v10/views/campgrounds/show.ejs
+++ b/FinalProject/v10/views/campgrounds/show.ejs
@@ -1,22 +1,22 @@
 <% include ../partials/header%>
-<div class="container ctnshow1">
-	<div class="container">
+<div class="container">
+	<div class="container ctnshow1">
 		<div class="row">
 			<div class="well">
 				<div class="media">
-					<a class="pull-left" href="#">
+					<a class="pull-left" href="/biodata/<%=campground.author.id%>">
 						<img class="media-object" src="<%=campground.author.image%>" onerror="this.src='https://myspace.com/common/images/user.png'" style="width:40px; height: 40px;">
 					</a>
 					<div class="media-body">
 						<h4 class="media-heading"><%= campground.name%></h4>
-						<p class="text-right">By <%= campground.author.username %></p>
+						<p class="text-right">By <a href="/biodata/<%=campground.author.id%>"><%= campground.author.username %></a></p>
 						<p><%=campground.description%></p>
 						<ul class="list-inline list-unstyled" style="position: absolute;">
 							<li><span><i class="glyphicon glyphicon-calendar"></i> <%= moment(campground.createdAt).fromNow() %> </span></li>
 							<li>|</li>
 							<span><i class="glyphicon glyphicon-comment"></i> <%=commentCount%> comments</span>
 							<%if(currentUser){%>
-							<% if(campground.author.id.equals(currentUser._id) || currentUser._id.equals("59febe24cbb24828842a9780")){%>
+							<% if(campground.author.id.equals(currentUser._id) || currentUser._id.equals("5a1f84e154087d0284656084")){%>
 							<li>|</li>
 							<li class="dropdown">
 								<a class="dropdown-toggle sh1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -47,21 +47,20 @@
 			</div>
 		</div>
 	</div>
-	<div class="container ctnshow1">
+	<div class="container">
 		<div class="row">
 			<div class="col-md-9">
 				<div class="well">
 					<div class="text-right">
-						<a class="btn btn-default btn-sm btn-success glyphicon glyphicon-plus" href="/story/<%=campground._id%>/comments/new">
-							Comment
-						</a>
+						<a class="btn btn-sm btn-success btn_show" href="/story/<%=campground._id%>/comments/new">
+						<div class="glyphicon glyphicon-plus"></div>&nbsp; Comment</a>
 					</div>
 					<%campground.comments.forEach(function(comment){ %>
 					<div class="comments-list">
 						<div class="media">
 							<p>
 								<%if(currentUser){%>
-								<% if(campground.author.id.equals(currentUser._id) || currentUser._id.equals("59febe24cbb24828842a9780")){%>
+								<% if(campground.author.id.equals(currentUser._id) || currentUser._id.equals("5a1f84e154087d0284656084")){%>
 								<ul class="dropdown pull-right">
 									<small><%= moment(comment.createdAt).fromNow() %></small> | 
 									<a class="dropdown-toggle sh1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
