--- a/FinalProject/v10/views/help.ejs
+++ b/FinalProject/v10/views/help.ejs
@@ -1,5 +1,5 @@
 <% include partials/header%>
-<div class="container hlpctnr">
+<div class="container hlpctnr ctrsad">
 	<div class="row">
 		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 			<div class="panel panel-default pd1">
