--- a/FinalProject/v10/views/partials/header.ejs
+++ b/FinalProject/v10/views/partials/header.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>No Judgement Zone</title>
+	<title>SONDER</title>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE-edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -31,13 +31,15 @@
 					<%if(!currentUser){ %>
 					<li><a href="/login">Login</a></li>
 					<li><a href="/register">Sign Up</a></li>
+					<li><a href="/story">Stories</a></li>
 					<li><a href="/about">About Us</a></li>
 					<li><a href="/help">Help</a></li>
 					<% }else{ %>
+					<li><a href="/story">Stories</a></li>
 					<li><a href="/about">About Us</a></li>
 					<li><a href="/help">Help</a></li>
 					<li class="dropdown list-inline">
-						<a class="dropdown-toggle" data-toggle="dropdown" href="#">Hi , <%=currentUser.username%>
+						<a class="dropdown-toggle" data-toggle="dropdown" href="#">Hi , <%=currentUser.username%>&nbsp;&nbsp;
 							<img class="img-circle" src="<%=currentUser.image%>" onerror="this.src='https://myspace.com/common/images/user.png'" style="width:25px; height: 25px;">
 							<span><i class="caret" aria-hidden="true"></i></span>
 						</a>
